[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.45"
futures = "0.3.17"
libbpf-rs = "0.15.0"
libc = "0.2.112"
serde = { version = "1.0.130", features = ["derive"] }
socket2 = { version = "0.4.2", features = ["all"] }
thiserror = "1.0.30"
tokio = { version = "1.13.0", default-features = false, features = [
    "fs", "io-std", "io-util", "macros", "sync", "net", "rt", "rt-multi-thread", "signal"
] }
toml = "0.5.8"

[build-dependencies]
libbpf-cargo = "0.9.4"
