[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
libbpf-rs = "0.19.1"
libc = "0.2.147"
pin-project = "1.1.3"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
socket2 = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.32.0", default-features = false, features = [
    "fs", "io-std", "io-util", "macros", "sync", "net", "rt", "rt-multi-thread"
] }
tokio-tower = "0.6.0"
toml = "0.7.6"
tower = { version = "0.4.13", features = ["full"] }

[build-dependencies]
libbpf-cargo = "0.13.1"

[workspace]
members = [
    "test-servers"
]
